Git tag and latest commit sha as version displayed in sidebar (#580)
* Git tag and latest sha as version displayed in sidebar

* HTTP API for get/set global settings shows version number

---------

Co-authored-by: Valerian G <valerian@dusklabs.io>

--- a/ui/src/Components/Sidebar/Toggle.scss
+++ b/ui/src/Components/Sidebar/Toggle.scss
@@ -6,6 +6,15 @@
     width: 32px;
   }
 
+  .version {
+    display: inline-block;
+    vertical-align: middle;
+    height: 100%;
+    margin-left: 1rem;
+    color: var(--tertiaryTextColor);
+    font-size: 0.8em;
+  }
+
   .toggle {
     position: absolute;
     bottom: 25%;
