Login page and related redirects working

--- a/dim-web/templates/register.html
+++ b/dim-web/templates/register.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
-{% block title %}Dim - Dashboard{% endblock %}
+{% block title %}Dim - Register{% endblock %}
 
 {% block content %}
+Register page
 {% endblock %}
