--- a/dim-web/templates/register.html
+++ b/dim-web/templates/register.html
@@ -13,6 +13,13 @@
     {% endif %}
   </header>
   <div class="fields">
+
+    {% for (level, message) in flashes %}
+    <div class="flash {{ level|lower }}">
+      {{- message -}}
+    </div>
+    {% endfor %}
+
     <label for="username">Username</label>
     <input required autofocus type="text" name="username" minlength="3" maxlength="30">
 
