--- a/dim-web/templates/login.html
+++ b/dim-web/templates/login.html
@@ -5,8 +5,8 @@
 {% block content %}
 <form class="auth-form" method="POST">
   <header>
-    <h2>Welcome back</h2>
-    <h3>Authenticate and continue to your media</h3>
+    <h2>Sign in</h2>
+    <h3>Authenticate to access to your media library.</h3>
   </header>
   <div class="fields">
 
