--- a/dim-web/templates/login.html
+++ b/dim-web/templates/login.html
@@ -24,7 +24,7 @@
   </div>
   <footer>
     <button>Login</button>
-    <a href="/register">Create a new account</a>
+    Don't have an account? <a href="/register">Create one here</a>
   </footer>
 </form>
 {% endblock %}
